Intermediate work on Fetchy system

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,6 @@ envlist=py26,py27,py31,py32,py33
 [testenv]
 deps=Cython
 commands=
-    {envpython} setup.py --quiet build install
+    {envpython} setup.py --quiet build install --with-cython
     {envpython} lupa/tests/test.py
 sitepackages=False
