Completely remove Cython-awareness from Fetchy install

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 envlist=py26,py27,py31,py32,py33
 
 [testenv]
-deps=Cython
 commands=
-    {envpython} setup.py --quiet build install --with-cython
+    {envpython} setup.py --quiet build install
     {envpython} lupa/tests/test.py
 sitepackages=False
